--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.so.*
 *.dll
 *.dylib
+*/build-*
 
 # Qt-es
 object_script.*.Release
@@ -23,7 +24,7 @@ object_script.*.Debug
 moc_*.cpp
 moc_*.h
 qrc_*.cpp
-# ui_*.h
+ui_*.h
 *.qmlc
 *.jsc
 Makefile*
